# print-server

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  error.rs  main.rs
src/api/: mod.rs  routh_methods.rs  state.rs
src/printer/: iprinter.rs  mod.rs  printer_manager.rs  winprinter.rs
upload/: documentFile  printerName
web/: index.html
web/assets/: main.css  main.js
