[package]
name = "print-server"
version = "0.1.0"
edition = "2024"

[dependencies]
winprint = "0.2.0"
axum = {version = "0.8.4", features = ["macros", "json"] }
axum-server = "0.7.2"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["cors"] }
